Нарисована гистограмма и подписаны имена участников

--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
   var wizardSpeed = 3;
   var wizardWidth = 70;
   var getWizardHeight = function() {
-    var wizardHeight = wizardWidth * 1.337;
-    return wizardHeight;
+    return wizardWidth * 1.337;
   };
   var getWizardX = function(width) {
     return width / 2 - wizardWidth / 2;
@@ -199,6 +198,7 @@
     return height / 3 - getWizardHeight();
   };
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
